tests/ui/suggestions/suggest-ref-macro.stderr
error[E0308]: mismatched types
  --> $DIR/auxiliary/proc-macro-type-error.rs:15:15
   |
LL | pub fn hello(_: TokenStream, _: TokenStream) -> TokenStream {
   | ----------------------------------------------------------- in this expansion of `#[hello]`
...
LL |             f(123);
   |             - ^^^ expected `&mut i32`, found integer
   |             |
   |             arguments to this function are incorrect
   |
  ::: $DIR/suggest-ref-macro.rs:8:1
   |
LL | #[hello]
   | -------- in this procedural macro expansion
   |
note: function defined here
  --> $DIR/auxiliary/proc-macro-type-error.rs:13:12
   |
LL | pub fn hello(_: TokenStream, _: TokenStream) -> TokenStream {
   | ----------------------------------------------------------- in this expansion of `#[hello]`
LL |     quote!(
LL |         fn f(_: &mut i32) {}
   |            ^ -----------
   |
  ::: $DIR/suggest-ref-macro.rs:8:1
   |
LL | #[hello]
   | -------- in this procedural macro expansion

error[E0308]: mismatched types
  --> $DIR/suggest-ref-macro.rs:15:11
   |
LL | / macro_rules! bla {
LL | |     () => {
LL | |         x(123);
   | |         - ^^^ expected `&mut i32`, found integer
   | |         |
   | |         arguments to this function are incorrect
LL | |
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `bla!`
...
LL |       bla!();
   |       ------ in this macro invocation
   |
note: function defined here
  --> $DIR/suggest-ref-macro.rs:11:4
   |
LL | fn x(_: &mut i32) {}
   |    ^ -----------
help: consider mutably borrowing here
   |
LL |         x(&mut 123);
   |           ++++

error[E0308]: mismatched types
  --> $DIR/suggest-ref-macro.rs:26:10
   |
LL |         x($v)
   |         - arguments to this function are incorrect
...
LL |     bla!(456);
   |          ^^^ expected `&mut i32`, found integer
   |
note: function defined here
  --> $DIR/suggest-ref-macro.rs:11:4
   |
LL | fn x(_: &mut i32) {}
   |    ^ -----------
help: consider mutably borrowing here
   |
LL |     bla!(&mut 456);
   |          ++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
